@@ -663,10 +663,10 @@ PHP 8.0 UPGRADE NOTES
     RFC: https://wiki.php.net/rfc/namespaced_names_as_token
 
 - XML:
-  . xml_parser_create(_ns) will now return an XmlParser object rather than a
+  . xml_parser_create(_ns) will now return an XMLParser object rather than a
     resource. Return value checks using is_resource() should be replaced with
     checks for `false`. The xml_parser_free() function no longer has an effect,
-    instead the XmlParser instance is automatically destroyed if it is no longer
+    instead the XMLParser instance is automatically destroyed if it is no longer
     referenced.
 
 - XMLReader:
