@@ -11,7 +11,7 @@ clone $parser;
 ?>
 ===DONE===
 --EXPECTF--
-Fatal error: Uncaught Error: Trying to clone an uncloneable object of class XmlParser in %s:%d
+Fatal error: Uncaught Error: Trying to clone an uncloneable object of class XMLParser in %s:%d
 Stack trace:
 #0 {main}
   thrown in %s on line %d
